refactoring all methods from sheet views

--- a/mail/templates/mail/settings.html
+++ b/mail/templates/mail/settings.html
@@ -109,6 +109,7 @@
         if (autoSend == 0){
             console.log("je ne veux pas voir le form ")
             formSettings.classList.add("d-none");
+            wish.textContent = "Je ne souhaite pas envoyer ce mail automatiquement ..."
         }else{
             console.log("je veux voir le form ")
             formSettings.classList.remove("d-none");
