--- a/spa-conf/static/spa_core/css/libs/color.scss
+++ b/spa-conf/static/spa_core/css/libs/color.scss
@@ -13,6 +13,12 @@ $third_color: tomato;
 .bg-primary{
 	background-color: $primary !important;
 }
+.bg-primary-h{
+	background-color: $primary !important;
+	&:hover{
+		background-color: darken($primary, 10) !important;
+	}
+}
 .bg-thrid-color{
 	background-color: $third_color !important;
 }
