fix bug scrolling on historic page

--- a/spa_core/static/spa_core/css/split/historic.scss
+++ b/spa_core/static/spa_core/css/split/historic.scss
@@ -39,7 +39,7 @@ $shape_table_5: 2rem 8rem 9rem 12rem 1fr;
 			}
 			.scrollable-part{
 				height: 50vh;
-				overflow: hidden;
+				overflow: scroll;
 
 				.rows{
 					display: grid;
